--- a/sécurité.html
+++ b/sécurité.html
@@ -6,17 +6,17 @@
     <meta charset="UTF-8">
     <link rel="icon" href="images/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Accueil A.C.E.</title>
+    <title>Sécurité A.C.E.</title>
 </head>
 <body>
     <header class="header">
-        <a href="#" class="logo">A.C.E.</a>
+        <a href="index.html" class="logo">A.C.E.</a>
         <input class="menu-btn" type="checkbox" id="menu-btn" />
         <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
         <ul class="menu">
           <li><a href="domotique.html">Domotique</a></li>
           <li><a href="interphonie.html">Interphonie</a></li>
-          <li><a href="sécurité.html">Sécurité</a></li>
+          <li><a href="#">Sécurité</a></li>
           <li><a href="automatisme.html">Automatisme</a></li>
           <li><a href="contact.html">Contacte</a></li>
           
