--- a/index.html
+++ b/index.html
@@ -18,10 +18,13 @@
           <li><a href="interphonie.html">Interphonie</a></li>
           <li><a href="sécurité.html">Sécurité</a></li>
           <li><a href="automatisme.html">Automatisme</a></li>
-          <li><a href="contact.html">Contacte</a></li>
-          
+          <li><a href="contact.html">Contacte</a></li>          
         </ul>
       </header>
+      <div class="multimédia">
+        <a href="https://www.youtube.com/" target="_blank"><img class="multimédia" src="images/youtube.png" alt="youtube"></a>
+        <a href="https://fr-fr.facebook.com/" target="_blank"><img class="multimédia" src="images/facebook.png" alt="facebook"></a>
+      </div>
     
 </body>
 </html>
