--- a/entretien.html
+++ b/entretien.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <link rel="icon" href="images/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Domotique A.C.E.</title>
+    <title>Contrats d'entretien et maintenance de vos installation</title>
 </head>
 <body>
     <header class="header">
@@ -14,10 +14,10 @@
         <input class="menu-btn" type="checkbox" id="menu-btn" />
         <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
         <ul class="menu">
-          <li><a href="#">Domotique</a></li>
-          <li><a href="interphonie.html">Interphonie</a></li>
-          <li><a href="sécurité.html">Sécurité</a></li>
+          <li><a href="sécurité.html">Sécurité & Contrôle</a></li>
           <li><a href="automatisme.html">Automatisme</a></li>
+          <li><a href="portail.html">Portes & Portails</a></li>
+          <li><a href="#">Contrats d'entretien</a></li>
           <li><a href="contact.html">Contacte</a></li>
           
         </ul>
