--- a/sécurité.html
+++ b/sécurité.html
@@ -23,7 +23,9 @@
     </header>
     <section id="portails">
         <div class="conainer">
-            
+            <div>
+                <img src="images/Vidéosurveillance.webp" alt="Vidéosuveillance">
+            </div>
             <div>
                 <h2>Vidéosurveillance</h2>
                 <p>Vous désirez opter pour une sécurité renforcée de votre site ou votre résidence, 
