--- a/index.html
+++ b/index.html
@@ -21,9 +21,11 @@
         </ul>
       </header>
       <div class="multimédia">
-        <a href="https://www.youtube.com/" target="_blank"><img class="multimédia" src="images/youtube.png" alt="youtube"></a>
+        <a href="https://www.youtube.com/channel/UCj_iGliGCkLcHSZ8eqVNPDQ" target="_blank"><img class="multimédia" src="images/youtube.png" alt="youtube"></a>
         <a href="https://fr-fr.facebook.com/" target="_blank"><img class="multimédia" src="images/facebook.png" alt="facebook"></a>
       </div>
+
+      <iframe class="vidéocomp2" width="200" height="150" src="https://www.youtube.com/embed/egH3cPggJbU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     
 </body>
 </html>
