--- a/portail.html
+++ b/portail.html
@@ -26,39 +26,29 @@
         <div class="carousel">
             <input type="radio" id="carousel-1" name="carousel[]" checked>
             <input type="radio" id="carousel-2" name="carousel[]">
-         <input type="radio" id="carousel-3" name="carousel[]">
-            <input type="radio" id="carousel-4" name="carousel[]">
-            <input type="radio" id="carousel-5" name="carousel[]">
+            <input type="radio" id="carousel-3" name="carousel[]">
             <ul class="carousel__items">
                 <li class="carousel__item"><img src="images/portails-battants-8.jpg" alt=""></li>
                 <li class="carousel__item"><img src="images/portails-battants-7.jpg" alt=""></li>
                 <li class="carousel__item"><img src="images/portails-battants-9.jpg" alt=""></li>
-                <li class="carousel__item"><img src="images/portails-battants-5.jpg" alt=""></li>
-                <li class="carousel__item"><img src="images/portails-battants-10.jpg" alt=""></li>
             </ul>
          <div class="carousel__prev">
             <label for="carousel-1"></label>
             <label for="carousel-2"></label>
             <label for="carousel-3"></label>
-            <label for="carousel-4"></label>
-            <label for="carousel-5"></label>
          </div>
          <div class="carousel__next">
            <label for="carousel-1"></label>
            <label for="carousel-2"></label>
            <label for="carousel-3"></label>
-           <label for="carousel-4"></label>
-           <label for="carousel-5"></label>
          </div>
          <div class="carousel__nav">
            <label for="carousel-1"></label>
            <label for="carousel-2"></label>
            <label for="carousel-3"></label>
-           <label for="carousel-4"></label>
-           <label for="carousel-5"></label>
          </div>
        </div>
-       <p class="portailbattant">PORTAILS BATTANTS</p>
+       <h2 class="portailbattant">PORTAILS BATTANTS</h2>
      </div>
      
     
