--- a/sécurité.html
+++ b/sécurité.html
@@ -1,54 +1,64 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-    <link rel="stylesheet" href="style.css">
-    <meta charset="UTF-8">
-    <link rel="icon" href="images/favicon.ico">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sécurité ,contrôle d'accès et interphonie</title>
-</head>
-<body>
-    <header class="header">
-        <a href="index.html" class="logo">A.C.E.</a>
-        <input class="menu-btn" type="checkbox" id="menu-btn" />
-        <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
-        <ul class="menu">
-          <li><a href="#">Sécurité & Contrôle</a></li>
-          <li><a href="automatisme.html">Automatisme</a></li>
-          <li><a href="portail.html">Portes & Portails</a></li>
-          <li><a href="entretien.html">Contrats d'entretien</a></li>
-          <li><a href="contact.html">Contacte</a></li> 
-        </ul>
-    </header>
 
-    <div class="container">
-        <div class="carousel">
-            <input type="radio" id="carousel-1" name="carousel[]" checked>
-            <input type="radio" id="carousel-2" name="carousel[]">
-            <input type="radio" id="carousel-3" name="carousel[]">
-            <ul class="carousel__items">
-                <li class="carousel__item"><img src="images/Vidéosurveillance1.png" alt=""></li>
-                <li class="carousel__item"><img src="images/Vidéosurveillance2.jpg" alt=""></li>
-                <li class="carousel__item"><img src="images/Vidéosurveillance3.jpg" alt=""></li>
-            </ul>
-         <div class="carousel__prev">
-            <label for="carousel-1"></label>
-            <label for="carousel-2"></label>
-            <label for="carousel-3"></label>
-         </div>
-         <div class="carousel__next">
-           <label for="carousel-1"></label>
-           <label for="carousel-2"></label>
-           <label for="carousel-3"></label>
-         </div>
-         <div class="carousel__nav">
-           <label for="carousel-1"></label>
-           <label for="carousel-2"></label>
-           <label for="carousel-3"></label>
-         </div>
-       </div>
-       <h2 class="portailbattant">VIDÉOSURVEILLANCE</h2>
-     </div>
-    
+<head>
+  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <link rel="icon" href="images/favicon.ico">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Sécurité ,contrôle d'accès et interphonie</title>
+</head>
+
+<body>
+  <header class="header">
+    <a href="index.html" class="logo">A.C.E.</a>
+    <input class="menu-btn" type="checkbox" id="menu-btn" />
+    <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
+    <ul class="menu">
+      <li><a href="#">Sécurité & Contrôle</a></li>
+      <li><a href="automatisme.html">Automatisme</a></li>
+      <li><a href="portail.html">Portes & Portails</a></li>
+      <li><a href="entretien.html">Contrats d'entretien</a></li>
+      <li><a href="contact.html">Contacte</a></li>
+    </ul>
+  </header>
+
+  <div class="container">
+    <div class="carousel">
+      <input type="radio" id="carousel-1" name="carousel[]" checked>
+      <input type="radio" id="carousel-2" name="carousel[]">
+      <input type="radio" id="carousel-3" name="carousel[]">
+      <ul class="carousel__items">
+        <li class="carousel__item"><img src="images/Vidéosurveillance1.png" alt=""></li>
+        <li class="carousel__item"><img src="images/Vidéosurveillance2.jpg" alt=""></li>
+        <li class="carousel__item"><img src="images/Vidéosurveillance3.jpg" alt=""></li>
+      </ul>
+      <div class="carousel__prev">
+        <label for="carousel-1"></label>
+        <label for="carousel-2"></label>
+        <label for="carousel-3"></label>
+      </div>
+      <div class="carousel__next">
+        <label for="carousel-1"></label>
+        <label for="carousel-2"></label>
+        <label for="carousel-3"></label>
+      </div>
+      <div class="carousel__nav">
+        <label for="carousel-1"></label>
+        <label for="carousel-2"></label>
+        <label for="carousel-3"></label>
+      </div>
+    </div>
+    <h2 class="portailbattant">VIDÉOSURVEILLANCE</h2>
+    <p class="texteportail">Caméras, Domes, DVR, Cablage Vous désirez opter pour une sécurité renforcée de votre site ou
+      votre résidence. Vous allez pouvoir visionner en images haute résolution les évènements qui se déroulent sur le
+      site que vous avez placé sous protection, de jour comme de nuit, en intérieur et en extérieur. Vous pourrez
+      inspecter des zones à risques contre toute intrusion, un cambriolage ou tentative de vandalisme. Les caméras dômes
+      ou caméras tubes proposées peuvent être équipées de LEDs infrarouges pour une vision de nuit à 20, 30 ou 60m et
+      certifiées IP65 ou IP 67 pour être résistantes aux conditions extérieures.</p>
+      <div class="Séparation"><img class="séparation" src="images/séparation3.png" alt="séparation"></div>
+  </div>
+
 </body>
+
 </html>
