--- a/automatisme.html
+++ b/automatisme.html
@@ -16,8 +16,8 @@
           <li><a href="sécurité.html">Sécurité & Contrôle</a></li>
           <li><a href="#">Automatisme</a></li>
           <li><a href="portail.html">Portes & Portails</a></li>
-          <li><a href="entretien.html">Contrats d'entretien</a></li>
-          <li><a href="contact.html">Contacte</a></li>
+          <li><a href="entretien.html">Contrats d'entretiens</a></li>
+          <li><a href="contact.html">Contact</a></li>
           
         </ul>
       </header>
