--- a/portail.html
+++ b/portail.html
@@ -18,14 +18,14 @@
       <li><a href="sécurité.html">Sécurité & Contrôle</a></li>
       <li><a href="automatisme.html">Automatisme</a></li>
       <li><a href="#">Portes & Portails</a></li>
-      <li><a href="entretien.html">Contrats d'entretien</a></li>
-      <li><a href="contact.html">Contacte</a></li>
+      <li><a href="entretien.html">Contrats d'entretiens</a></li>
+      <li><a href="contact.html">Contact</a></li>
 
     </ul>
   </header>
 
   <div class="container">
-    <div class="carousel">
+    <div class="mediacarousel1"><div class="carousel">
       <input type="radio" id="carousel-1" name="carousel[]" checked>
       <input type="radio" id="carousel-2" name="carousel[]">
       <input type="radio" id="carousel-3" name="carousel[]">
@@ -48,16 +48,16 @@
         <label for="carousel-1"></label>
         <label for="carousel-2"></label>
         <label for="carousel-3"></label>
-      </div>
+      </div></div>
     </div>
-    <h2 class="portailbattant">PORTAILS BATTANTS</h2>
+    <div class="textemedia1"><h2 class="portailbattant">PORTAILS BATTANTS</h2>
     <p class="texteportail">Portail ouverture à la française ou à l'anglaise selon les situations, à 1 ou 2 vantails
       symétriques ou asymétriques. Il peut être décliné selon les goûts en tôle pleine, tous types de barreaudages et/ou
       ornements. De plus, il est équipé d'un système de déverrouillage en cas de panne autre qu'électrique et d'un
-      déverrouillage automatique en cas de panne de courant.</p>
-      <div class="Séparation"><img class="séparation" src="images/séparation3.png" alt="séparation"></div>
+      déverrouillage automatique en cas de panne de courant.</p></div>
+      
   </div>
-  
+  <div class="Séparation"><img class="séparation" src="images/séparation3.png" alt="séparation"></div>
 
 
 </body>
