--- a/sécurité.html
+++ b/sécurité.html
@@ -18,13 +18,13 @@
       <li><a href="#">Sécurité & Contrôle</a></li>
       <li><a href="automatisme.html">Automatisme</a></li>
       <li><a href="portail.html">Portes & Portails</a></li>
-      <li><a href="entretien.html">Contrats d'entretien</a></li>
-      <li><a href="contact.html">Contacte</a></li>
+      <li><a href="entretien.html">Contrats d'entretiens</a></li>
+      <li><a href="contact.html">Contact</a></li>
     </ul>
   </header>
 
   <div class="container">
-    <div class="carousel">
+    <div class="mediacarousel1"><div class="carousel">
       <input type="radio" id="carousel-1" name="carousel[]" checked>
       <input type="radio" id="carousel-2" name="carousel[]">
       <input type="radio" id="carousel-3" name="carousel[]">
@@ -47,18 +47,18 @@
         <label for="carousel-1"></label>
         <label for="carousel-2"></label>
         <label for="carousel-3"></label>
-      </div>
+      </div></div>
     </div>
-    <h2 class="portailbattant">VIDÉOSURVEILLANCE</h2>
+    <div class="textemedia1"><h2 class="portailbattant">VIDÉOSURVEILLANCE</h2>
     <p class="texteportail">Caméras, Domes, DVR, Cablage Vous désirez opter pour une sécurité renforcée de votre site ou
       votre résidence. Vous allez pouvoir visionner en images haute résolution les évènements qui se déroulent sur le
       site que vous avez placé sous protection, de jour comme de nuit, en intérieur et en extérieur. Vous pourrez
       inspecter des zones à risques contre toute intrusion, un cambriolage ou tentative de vandalisme. Les caméras dômes
       ou caméras tubes proposées peuvent être équipées de LEDs infrarouges pour une vision de nuit à 20, 30 ou 60m et
-      certifiées IP65 ou IP 67 pour être résistantes aux conditions extérieures.</p>
-      <div class="Séparation"><img class="séparation" src="images/séparation3.png" alt="séparation"></div>
+      certifiées IP65 ou IP 67 pour être résistantes aux conditions extérieures.</p></div>
+      
   </div>
-
+<div class="Séparation"><img class="séparation" src="images/séparation3.png" alt="séparation"></div>
 </body>
 
 </html>
