--- a/contact.html
+++ b/contact.html
@@ -16,8 +16,8 @@
           <li><a href="sécurité.html">Sécurité & Contrôle</a></li>
           <li><a href="automatisme.html">Automatisme</a></li>
           <li><a href="portail.html">Portes & Portails</a></li>
-          <li><a href="entretien.html">Contrats d'entretien</a></li>
-          <li><a href="#">Contacte</a></li>
+          <li><a href="entretien.html">Contrats d'entretiens</a></li>
+          <li><a href="#">Contact</a></li>
           
         </ul>
       </header>
