--- a/entretien.html
+++ b/entretien.html
@@ -16,8 +16,8 @@
           <li><a href="sécurité.html">Sécurité & Contrôle</a></li>
           <li><a href="automatisme.html">Automatisme</a></li>
           <li><a href="portail.html">Portes & Portails</a></li>
-          <li><a href="#">Contrats d'entretien</a></li>
-          <li><a href="contact.html">Contacte</a></li>
+          <li><a href="#">Contrats d'entretiens</a></li>
+          <li><a href="contact.html">Contact</a></li>
           
         </ul>
       </header>
