--- a/sécurité.html
+++ b/sécurité.html
@@ -24,7 +24,7 @@
   </header>
 
   <div class="container">
-    <div class="mediacarousel1"><div class="carousel">
+    <div class="carousel">
       <input type="radio" id="carousel-1" name="carousel[]" checked>
       <input type="radio" id="carousel-2" name="carousel[]">
       <input type="radio" id="carousel-3" name="carousel[]">
@@ -47,10 +47,10 @@
         <label for="carousel-1"></label>
         <label for="carousel-2"></label>
         <label for="carousel-3"></label>
-      </div></div>
+      </div>
     </div>
     <div class="textemedia1"><h2 class="portailbattant">VIDÉOSURVEILLANCE</h2>
-    <p class="texteportail">Caméras, Domes, DVR, Cablage Vous désirez opter pour une sécurité renforcée de votre site ou
+      <p class="texteportail">Caméras, Domes, DVR, Cablage Vous désirez opter pour une sécurité renforcée de votre site ou
       votre résidence. Vous allez pouvoir visionner en images haute résolution les évènements qui se déroulent sur le
       site que vous avez placé sous protection, de jour comme de nuit, en intérieur et en extérieur. Vous pourrez
       inspecter des zones à risques contre toute intrusion, un cambriolage ou tentative de vandalisme. Les caméras dômes
