--- a/portail.html
+++ b/portail.html
@@ -25,7 +25,7 @@
   </header>
 
   <div class="container">
-    <div class="mediacarousel1"><div class="carousel">
+    <div><div class="carousel">
       <input type="radio" id="carousel-1" name="carousel[]" checked>
       <input type="radio" id="carousel-2" name="carousel[]">
       <input type="radio" id="carousel-3" name="carousel[]">
