--- a/sécurité.html
+++ b/sécurité.html
@@ -24,7 +24,7 @@
   </header>
 
   <div class="container">
-    <div class="carousel">
+    <div><div class="carousel">
       <input type="radio" id="carousel-1" name="carousel[]" checked>
       <input type="radio" id="carousel-2" name="carousel[]">
       <input type="radio" id="carousel-3" name="carousel[]">
@@ -47,7 +47,7 @@
         <label for="carousel-1"></label>
         <label for="carousel-2"></label>
         <label for="carousel-3"></label>
-      </div>
+      </div></div>
     </div>
     <div class="textemedia1"><h2 class="portailbattant">VIDÉOSURVEILLANCE</h2>
       <p class="texteportail">Caméras, Domes, DVR, Cablage Vous désirez opter pour une sécurité renforcée de votre site ou
