--- a/automatisme.html
+++ b/automatisme.html
@@ -21,6 +21,10 @@
           
         </ul>
       </header>
+      <footer>
+        <a href="https://www.youtube.com/channel/UCj_iGliGCkLcHSZ8eqVNPDQ" target="_blank"><img class="multimédia" src="images/youtube.png" alt="youtube"></a>
+        <a href="https://fr-fr.facebook.com/" target="_blank"><img class="multimédia" src="images/facebook.png" alt="facebook"></a>
+    </footer>
 
       
   
