--- a/contact.html
+++ b/contact.html
@@ -55,6 +55,10 @@
   <p><input type="submit" value="Envoyer"></p>
 </form>
 </div>
+<footer>
+  <a href="https://www.youtube.com/channel/UCj_iGliGCkLcHSZ8eqVNPDQ" target="_blank"><img class="multimédia" src="images/youtube.png" alt="youtube"></a>
+  <a href="https://fr-fr.facebook.com/" target="_blank"><img class="multimédia" src="images/facebook.png" alt="facebook"></a>
+</footer>
     
 </body>
 </html>
