--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
           <li><a href="contact.html">Contact</a></li>          
         </ul>
       </header>
-      <div class="multimédia">
+      <footer>
         <a href="https://www.youtube.com/channel/UCj_iGliGCkLcHSZ8eqVNPDQ" target="_blank"><img class="multimédia" src="images/youtube.png" alt="youtube"></a>
         <a href="https://fr-fr.facebook.com/" target="_blank"><img class="multimédia" src="images/facebook.png" alt="facebook"></a>
-      </div>
+    </footer>
 
       
       
