--- a/sécurité.html
+++ b/sécurité.html
@@ -60,7 +60,10 @@
   </div>
 <div class="Séparation"><img class="séparation" src="images/séparation3.png" alt="séparation"></div>
 
-
+<footer>
+  <a href="https://www.youtube.com/channel/UCj_iGliGCkLcHSZ8eqVNPDQ" target="_blank"><img class="multimédia" src="images/youtube.png" alt="youtube"></a>
+  <a href="https://fr-fr.facebook.com/" target="_blank"><img class="multimédia" src="images/facebook.png" alt="facebook"></a>
+</footer>
 </body>
 
 </html>
