--- a/contact.html
+++ b/contact.html
@@ -40,11 +40,11 @@
   <fieldset>
     <legend>Votre demande</legend>  
         <label class="labelformulaire" for="Dépannage"><input id="Dépannage" type="checkbox" name="demande" value="Dépannage"> Dépannage</label>
-        <label class="labelformulaire" for="Éclairage"><input id="Éclairage" type="checkbox" name="demande" value="Éclairage"> Éclairage</label>
+        <label class="labelformulaire" for="Vidéosurveillance"><input id="Vidéosurveillance" type="checkbox" name="demande" value="Vidéosurveillance"> Vidéosurveillance</label>
         <label class="labelformulaire" for="Interphonie"><input id="Interphonie" type="checkbox" name="demande" value="Interphonie"> Interphonie</label>
         <label class="labelformulaire" for="Alarme"><input id="Alarme" type="checkbox" name="demande" value="Alarme"> Alarme</label>
-        <label class="labelformulaire" for="Domotique"><input id="Domotique" type="checkbox" name="demande" value="Domotique"> Domotique</label>
-        <label class="labelformulaire" for="Installation éléctrique"><input id="Installation éléctrique" type="checkbox" name="demande" value="Installation éléctrique"> Installation éléctrique</label>
+        <label class="labelformulaire" for="Automatisation"><input id="Automatisation" type="checkbox" name="demande" value="Automatisation"> Automatisation</label>
+        <label class="labelformulaire" for="Portes / Portails"><input id="Portes / Portails" type="checkbox" name="demande" value="Portes / Portails"> Portes / Portails</label>
         <br>
         <br>
       
