--- a/contact.html
+++ b/contact.html
@@ -44,7 +44,7 @@
         <label class="labelformulaire" for="Interphonie"><input id="Interphonie" type="checkbox" name="demande" value="Interphonie"> Interphonie</label>
         <label class="labelformulaire" for="Alarme"><input id="Alarme" type="checkbox" name="demande" value="Alarme"> Alarme</label>
         <label class="labelformulaire" for="Automatisation"><input id="Automatisation" type="checkbox" name="demande" value="Automatisation"> Automatisation</label>
-        <label class="labelformulaire" for="Portes / Portails"><input id="Portes / Portails" type="checkbox" name="demande" value="Portes / Portails"> Portes / Portails</label>
+        <label class="labelformulaire" for="Portes / Portails"><input id="Portes / Portails" type="checkbox" name="demande" value="Portes / Portails"> Devis</label>
         <br>
         <br>
       
