--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
       <input id="nom" placeholder="Olivier Serre" autofocus="" required=""><br>
       <label class="labelformulaire" for="telephone">Portable <em>*</em></label>
       
-      <input id="telephone" type="tel" placeholder="06xxxxxxxx" pattern="06[0-9]{8}"><br>
+      <input id="telephone" type="tel" placeholder="06xxxxxxxx" required="" pattern="06[0-9]{8}"><br>
       <label class="labelformulaire" for="email">Email <em>*</em></label>
       <input id="email" type="email" placeholder="prenom.nom@polytechnique.edu" required="" pattern="[a-zA-Z]*.[a-zA-Z]*@polytechnique.edu"><br>
   </fieldset>
@@ -44,7 +44,7 @@
         <label class="labelformulaire" for="Interphonie"><input id="Interphonie" type="checkbox" name="demande" value="Interphonie"> Interphonie</label>
         <label class="labelformulaire" for="Alarme"><input id="Alarme" type="checkbox" name="demande" value="Alarme"> Alarme</label>
         <label class="labelformulaire" for="Automatisation"><input id="Automatisation" type="checkbox" name="demande" value="Automatisation"> Automatisation</label>
-        <label class="labelformulaire" for="Portes / Portails"><input id="Portes / Portails" type="checkbox" name="demande" value="Portes / Portails"> Devis</label>
+        <label class="labelformulaire" for="Devis"><input id="Devis" type="checkbox" name="demande" value="Devis"> Devis</label>
         <br>
         <br>
       
